Remove duplicate entries in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,20 @@
 flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.3/flash_attn-2.7.3+cu12torch2.6cxx11abiFALSE-cp310-cp310-linux_x86_64.whl
 transformers-stream-generator
-transformers==4.57.1
 huggingface_hub
-albumentations
 qwen-vl-utils
-pyvips-binary
 sentencepiece
 opencv-python
-docling-core
 torch==2.6.0
-python-docx
+transformers
 torchvision
-supervision 
 matplotlib
 accelerate
-pdf2image
-num2words
-reportlab
-html2text
-xformers
-markdown
 requests
-pymupdf
-loguru
 hf_xet
 spaces
-pyvips
 pillow
 gradio
 einops
-httpx
-click
 peft
 fpdf
 timm
